--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Paycheck-calculator",
+  "name": "paycheck-calculator",
   "homepage": "http://Burov96.github.io/Paycheck-calculator",
   "version": "0.1.0",
   "private": false,
